# phosphor-debug-collector

./: .clang-format  .clang-tidy  .gitignore  .shellcheck-ignore  MAINTAINERS  Makefile.am  OWNERS  README.md  argument.cpp  argument.hpp  base_dump_entry.cpp  base_dump_entry.hpp  base_dump_manager.hpp  bmc_dump_entry.cpp  bmc_dump_entry.hpp  bmcstored_dump_entry.cpp  bmcstored_dump_entry.hpp  bootstrap.sh  com  configure.ac  core_manager.cpp  core_manager.hpp  core_manager_main.cpp  dump-extensions-watch.hpp  dump-extensions.hpp  dump_collector.hpp  dump_create.hpp  dump_entry.cpp  dump_entry.hpp  dump_entry_handler.hpp  dump_entry_helper.hpp  dump_file_helper.hpp  dump_helper.cpp  dump_helper.hpp  dump_internal.cpp  dump_internal.hpp  dump_manager.cpp  dump_manager.hpp  dump_manager_bmc.cpp  dump_manager_bmc.hpp  (+77 more)
dreport/: dreport.sh
dump-extensions/: meson.build
dump-extensions/default/: default-watch.cpp  default.cpp  meson.build
dump-extensions/openpower-dumps/: .nfs0000000015eaa736000000f6  README.md  clear_hostdumps_poweroff.service  clear_hostdumps_poweroff.service.in  create_openpower_dump_dirs.service  create_openpower_dump_dirs.service.in  dump-extensions.cpp  dump-watch-extensions.cpp  dump_entry_factory.cpp  dump_entry_factory.hpp  dump_helper.hpp  dump_manager_hardware.cpp  dump_manager_hardware.hpp  dump_manager_hostboot.cpp  dump_manager_hostboot.hpp  dump_manager_hostdump.hpp  dump_manager_openpower.cpp  dump_manager_openpower.hpp  dump_manager_resource.cpp  dump_manager_resource.hpp  dump_manager_sbe.cpp  dump_manager_sbe.hpp  dump_manager_system.cpp  dump_manager_system.hpp  hardware_dump_entry.hpp  host_dump_entry.hpp  host_dump_entry.tpp  host_dump_entry_handler.cpp  host_dump_entry_handler.hpp  hostboot_dump_entry.cpp  hostboot_dump_entry.hpp  hostboot_dump_watch.cpp  hostboot_dump_watch.hpp  meson.build  op_dump_consts.hpp  op_dump_types.yaml  op_dump_util.cpp  op_dump_util.hpp  opdreport  openpower_dump  (+15 more)
dump-extensions/openpower-dumps/yamls/: dump_types.yaml  meson.build
host-transport-extensions/: meson.build
host-transport-extensions/default/: default.cpp  meson.build
host-transport-extensions/pldm/: meson.build
host-transport-extensions/pldm/common/: pldm_utils.cpp  pldm_utils.hpp
host-transport-extensions/pldm/default/: meson.build  pldm_interface.cpp
host-transport-extensions/pldm/oem/ibm/: meson.build  pldm_oem_cmds.cpp  pldm_oem_cmds.hpp  pldm_oem_cmds_util.hpp
offload-extensions/: extensions.mk  meson.build
offload-extensions/default/: default.cpp  meson.build
offload-extensions/pldm/: meson.build  pldm.mk  pldm_interface.cpp
scripts/: .get_fw_level.swp  get_disk_usage  get_fw_level
service_files/: meson.build  obmc-dump-monitor.service  ramoops-monitor.service  xyz.openbmc_project.Dump.Manager.service
test/: debug_inif_test.cpp  meson.build
tools/: dreport  elog_report.cpp
tools/dreport.d/: README.md  dreport  dreport.conf  dreport.conf.in  gendumpheader  sample.conf
tools/dreport.d/ibm.d/: appsdata  badvpd  devtree  gendumpheader  gendumpinfo  hostboot  ibm_package  package
tools/dreport.d/ibm.d/plugins.d/: backup_fw_info  badpel  devtree  faultlog  obmcconsole1  pels  peltooll  phaldevtree  vpd_data
tools/dreport.d/include.d/: config  dcommon  functions  package
tools/dreport.d/openpower.d/: README.md  opdreport
tools/dreport.d/openpower.d/plugins.d/: cfam  dumpfilelist  guardlist  hostboot  hostboot_partitions  obmcconsole1  occ  pelloglist  phal_devtree
tools/dreport.d/plugins.d/: altfwprintenv  auditlog  basebiostable  bios  bmcstate  bmcweb  chassisstate  coredump-ktrace  corefile  cpuinfo  dbuslist  dbusstats  diskusage  dmesginfo  elog  elogall  emconfig  failedservices  fanctldump  fanmondump  fwprintenv  general  guard  hostlogger  hostnamectl  hoststate  hwmon  interrupts  inventory  ipaddr  iplink  journalnopager  journalpid  journalpretty  kernelfile  kernlcmdline  ldapdump  ledgroup  lktrace  mctp  (+25 more)
xyz/openbmc_project/Dump/: Manager.errors.yaml  Manager.metadata.yaml  Monitor.errors.yaml  Monitor.metadata.yaml
xyz/openbmc_project/Dump/Internal/: Create.interface.yaml
xyz/openbmc_project/Dump/Internal/Create/: meson.build
